--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,14 +13,16 @@
     position: absolute;
     transform: translate(-50%);
     width: 100%;
-    background-image: url(/login-page-trabalho/imagens/lycg-xl.jpg);
+    background-image: url(/imagens/lycg-xl.jpg);
     background-size: cover;
 }
 .header {
     display: flex;
     justify-content: space-between;
-    max-width: 100%;
-    position: relative;
+    flex-direction: row;
+    max-width: 1208px;
+    align-items: center;
+    margin: auto;
     top: 8px;
 }
 .logo-links {
@@ -39,6 +41,7 @@
     left: 4px;
 }
 .location-icons {
+    padding-left: 200px;
     display: flex;
     gap: 7px;
     align-items: center;
@@ -76,13 +79,14 @@
     color: #053361;
 }
 .input-search {
+    width: 100%;
     border: none;
     border-radius: 10px;
     background-color: white;
     position: relative;
     top: 34px;
     padding: 12px 10px 12px 10px;
-    box-shadow: 3px 3px 9px #053361;
+    box-shadow: 3px 3px 10px #053361;
 }
 .input-search:hover {
     border: 2px solid #0763be;
@@ -94,6 +98,7 @@
     font-size: 130%;
     color: #053361;
 }
+
 #search1 {
     width: 1150px;
     height: 25px;
@@ -106,6 +111,13 @@
     left: 15px;
     text-decoration: none;
 }
+
+@media screen {
+    #search1 {
+        width: 500px;
+    }
+    
+}
 #search1:hover {
     width: 1150px;
     height: 25px;
@@ -117,3 +129,41 @@
     position: absolute;
     left: 15px;
 }
+
+
+
+h1 {
+    font-size: 76px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #053361;
+    
+}
+
+#simbolo-r {
+    font-size: 36px;
+}
+
+#text-simb {
+    color: #2a2a2b;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+
+}
+
+#btn-car {
+    appearance: none;
+    box-sizing: border-box;
+    display: inline-flex;
+    padding: 10px 70px ;
+    position: relative;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+    border-radius: 3px;
+    color:#053361;
+    background-color: #ffd900;
+
+}
+
+
