Edição feita pelo professor

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@
     position: absolute;
     transform: translate(-50%);
     width: 100%;
-    background-image: url(/imagens/lycg-xl.jpg);
+    background-image: url("../imagens/lycg-xl.jpg");
     background-size: cover;
 }
 .header {
@@ -80,6 +80,9 @@
 }
 .input-search {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: none;
     border-radius: 10px;
     background-color: white;
@@ -91,10 +94,12 @@
 .input-search:hover {
     border: 2px solid #0763be;
 }
+.icone {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
 #lupa {
-    position: relative;
-    left: 1197px;
-    top: 3px;
     font-size: 130%;
     color: #053361;
 }
@@ -107,8 +112,6 @@
     outline: none !important;
     font-size: 17px;
     font-weight: bold;
-    position: absolute;
-    left: 15px;
     text-decoration: none;
 }
 
@@ -126,8 +129,6 @@
     outline: none !important;
     font-size: 18px;
     font-weight: 100;
-    position: absolute;
-    left: 15px;
 }
 
 
