--- a/css/estilos.css
+++ b/css/estilos.css
@@ -184,3 +184,24 @@
     display: flex;
     align-items: center;
 }
+.box-conteudo {
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 20px;
+    position: absolute;
+    left: 170px;
+    right: 170px;
+    top: 605px;
+    padding: 54px;
+    width: 75%;
+    height: 70%;
+}
+#qualifield {
+    font-size: 31px;
+    font-weight: 700;
+    letter-spacing: .5px;
+    line-height: 39px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    color: #053361;
+}
